src/App.css
html {
  scroll-behavior: smooth;
}

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  font-size: 16px;
  line-height: 1.6;
}

body {
  font-family: Ubunut, sans-serif;
  background: #fafafa;
  color: #616161;
}

ul {
  list-style: none;
}

a {
  text-decoration: none;
  color: inherit;
}

a:hover {
  transform: scale(1.03);
}

img {
  object-fit: cover;
  max-width: 100%;
}

